VERSION 2.2 - unreleased
========================
2005-02 - private module added: private copy of fieldspace
2005-01 - SmacqModule::usesfield() wraps DTS::requirefield() but facilitates join optimization
2005-01 - join optimization: early evaluation of per-alias invariant predicates
2005-01 - timeval,time,ntime types: string parser now uses GNU get_date (like CVS dates)
2005-01 - sv4 type: start and stop times are now timevals instead of time_t
2005-01 - print module: --boulder (Boulder output format) added
2004-12 - changes module added: detects(/filters for) changes in dynamics
2004-12 - print module: '*' removed; specifying no fields now prints all fields
2004-12 - bugfix: DtsObject reference counting now handles uses cycles (memory leak)
2004-12 - SmacqModule::enqueue() is now a callback to the scheduler:
           - SmacqModule::canproduce() and dequeue() are obsoleted
           - Module destructors can now enqueue()
           - Last-call semantics on produce() removed
           - Most modules no longer implement produce()
           - enqueue() object proceeds before object being consumed
2004-12 - smacq_getoptsbyname():
           - now prints help on error
           - now handles -xy as -x -y and not as --xy
2004-11 - smacqq: 
           - Added "-t" option to describe a type
           - Added "-q" option to avoid new warnings
2004-11 - Refactored smacq(1) and smacqq(1) manpages

VERSION 2.1 - 15 November 2004
==============================
2004-11 - Parsers now return better error messages
2004-11 - bugfix: Scheduler made producers greedy
2004-11 - HAVING clauses added to joins 
2004-10 - Joins added to query language
2004-10 - print "*" (like select * in SQL)
2004-10 - DtsObject::getfield(char*) method added. 
2004-10 - Python module <neale>
2004-09 - dts_field replaced with DtsField (an STL vector)

VERSION 2.0 - 6 September 2004
==============================
2004-08 - C API for modules removed
		- Modules are classes now too